--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "main": "lib/index.js",
   "bin": "bin/index.js",
   "scripts": {
-    "test": "bash run-examples"
+    "test": "npm run test:lint && npm run test:mocha",
+    "test:lint": "eslint -c .eslintrc.json lib bin test",
+    "test:mocha": "bash run-examples"
   },
   "homepage": "https://github.com/zacanger/jsdoctap#readme",
   "repository": {
@@ -20,7 +22,9 @@
   },
   "bugs": "https://github.com/zacanger/jsdoctap/issues",
   "keywords": [
+    "doctest",
     "doctests",
+    "documentation",
     "jsdoc",
     "node-tap",
     "tap",
@@ -38,9 +42,18 @@
     "uglify-js": "3.0.27"
   },
   "devDependencies": {
+    "babel-eslint": "7.2.3",
     "babel-register": "6.24.1",
     "blanket": "1.2.3",
     "bluebird": "3.5.0",
+    "eslint": "4.4.1",
+    "eslint-config-standard": "10.2.1",
+    "eslint-plugin-babel": "4.1.2",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-node": "5.1.1",
+    "eslint-plugin-promise": "3.5.0",
+    "eslint-plugin-standard": "3.0.1",
+    "eslint-plugin-unicorn": "2.1.2",
     "mocha": "3.5.0",
     "mocha-spec-cov-alt": "1.1.1"
   },
