--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "blanket": "1.2.3",
     "bluebird": "3.5.0",
     "eslint": "4.4.1",
+    "eslint-config-jane": "0.4.3",
     "eslint-config-standard": "10.2.1",
     "eslint-plugin-babel": "4.1.2",
     "eslint-plugin-import": "2.7.0",
