--- a/package.json
+++ b/package.json
@@ -35,11 +35,9 @@
   "dependencies": {
     "commander": "2.11.0",
     "dox": "0.9",
-    "js-beautify": "1.6.14",
     "lodash": "4.17.4",
     "should": "11.2.1",
-    "tap": "10.7.1",
-    "uglify-js": "3.0.27"
+    "tap": "10.7.1"
   },
   "devDependencies": {
     "babel-eslint": "7.2.3",
@@ -47,7 +45,6 @@
     "blanket": "1.2.3",
     "bluebird": "3.5.0",
     "eslint": "4.4.1",
-    "eslint-config-jane": "0.4.3",
     "eslint-config-standard": "10.2.1",
     "eslint-plugin-babel": "4.1.2",
     "eslint-plugin-import": "2.7.0",
