--- a/package.json
+++ b/package.json
@@ -33,17 +33,13 @@
     "workflow"
   ],
   "dependencies": {
-    "commander": "2.11.0",
-    "dox": "0.9",
+    "dox": "0.9.0",
     "lodash": "4.17.4",
-    "should": "11.2.1",
-    "tap": "10.7.1"
+    "tap": "10.7.2"
   },
   "devDependencies": {
     "babel-eslint": "7.2.3",
     "babel-register": "6.24.1",
-    "blanket": "1.2.3",
-    "bluebird": "3.5.0",
     "eslint": "4.4.1",
     "eslint-config-standard": "10.2.1",
     "eslint-plugin-babel": "4.1.2",
@@ -52,23 +48,7 @@
     "eslint-plugin-promise": "3.5.0",
     "eslint-plugin-standard": "3.0.1",
     "eslint-plugin-unicorn": "2.1.2",
-    "mocha": "3.5.0",
-    "mocha-spec-cov-alt": "1.1.1"
-  },
-  "config": {
-    "blanket": {
-      "data-cover-never": [
-        "node_modules"
-      ],
-      "pattern": [
-        "lib",
-        "bin"
-      ],
-      "spec-cov": {
-        "threshold": 70,
-        "lcovOutput": "lcov"
-      }
-    }
+    "mocha": "3.5.0"
   },
   "engines": {
     "node": ">=6.0.0"
