--- a/package.json
+++ b/package.json
@@ -34,13 +34,14 @@
     "workflow"
   ],
   "dependencies": {
+    "babel-polyfill": "6.23.0",
+    "babel-register": "6.24.1",
     "dox": "0.9.0",
     "lodash": "4.17.4",
     "tap": "10.7.2"
   },
   "devDependencies": {
     "babel-eslint": "7.2.3",
-    "babel-register": "6.24.1",
     "eslint": "4.4.1",
     "eslint-config-standard": "10.2.1",
     "eslint-plugin-babel": "4.1.2",
