--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-register": "6.24.1",
     "dox": "0.9.0",
     "lodash": "4.17.4",
+    "require-from-string": "1.2.1",
     "tap": "10.7.2"
   },
   "devDependencies": {
