--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "test": "npm run test:lint && npm run test:tap",
     "test:lint": "eslint -c .eslintrc.json lib bin test",
-    "test:examples": "./bin/index.js examples/* | tap-spec",
+    "test:examples": "./examples.sh",
     "test:tap": "tap test/*.test.js | tap-spec"
   },
   "homepage": "https://github.com/zacanger/jsdoctap#readme",
