--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "main": "lib/index.js",
   "bin": "bin/index.js",
   "scripts": {
-    "test": "npm run test:lint && npm run test:tap",
+    "test": "npm run test:lint && npm run test:tap && npm run test:examples",
     "test:lint": "eslint -c .eslintrc.json lib bin test",
-    "test:examples": "./bin/index.js examples/* | tap-spec",
+    "test:examples": "./examples.sh",
     "test:tap": "tap test/*.test.js | tap-spec"
   },
   "homepage": "https://github.com/zacanger/jsdoctap#readme",
