--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "babel-register": "6.24.1",
     "dox": "0.9.0",
     "lodash": "4.17.4",
-    "tap": "10.7.2"
+    "tap": "10.7.2",
+    "zeelib": "2.0.9"
   },
   "devDependencies": {
     "babel-eslint": "7.2.3",
