--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,4 @@
 {
-  "extends": [ "standard" ],
-  "plugins": [ "babel" ],
-  "parser": "babel-eslint",
-  "rules": {
-    "arrow-parens": ["warn", "always"],
-    "block-spacing": [0],
-    "key-spacing": [0],
-    "no-multi-spaces": [0],
-    "object-curly-spacing": [1, "always"],
-    "one-var": [0]
-  }
+  "root": true,
+  "extends": "eslint-config-jane"
 }
