--- a/package.json
+++ b/package.json
@@ -43,12 +43,11 @@
     "babel-polyfill": "6.26.0",
     "babel-register": "6.26.0",
     "eslint": "4.4.1",
-    "eslint-config-standard": "10.2.1",
+    "eslint-config-jane": "0.5.0",
     "eslint-plugin-babel": "4.1.2",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-node": "5.1.1",
     "eslint-plugin-promise": "3.5.0",
-    "eslint-plugin-standard": "3.0.1",
     "eslint-plugin-unicorn": "2.1.2",
     "tap-spec": "4.1.1"
   },
