--- a/package.json
+++ b/package.json
@@ -34,16 +34,16 @@
     "workflow"
   ],
   "dependencies": {
+    "babel-core": "6.26.0",
     "dox": "0.9.0",
     "tap": "10.7.2",
-    "zeelib": "3.0.2"
+    "zeelib": "3.0.3"
   },
   "devDependencies": {
     "babel-eslint": "7.2.3",
     "babel-polyfill": "6.26.0",
-    "babel-register": "6.26.0",
-    "eslint": "4.4.1",
-    "eslint-config-jane": "0.5.0",
+    "eslint": "4.5.0",
+    "eslint-config-jane": "0.5.1",
     "eslint-plugin-babel": "4.1.2",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-node": "5.1.1",
