--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "bin": "bin/index.js",
   "scripts": {
     "test": "npm run test:lint && npm run test:tap && npm run test:examples",
-    "test:examples": "./bin/index.js examples/* | tap-spec",
+    "test:examples": "./bin/index.js examples/*.js | tap-spec",
     "test:lint": "eslint -c .eslintrc.json lib bin",
     "test:tap": "tap lib/*.test.js | tap-spec"
   },
