--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "babel-core": "6.26.0",
     "dox": "0.9.0",
+    "require-from-string": "1.2.1",
     "tap": "10.7.2",
     "zeelib": "3.0.8"
   },
