--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   ],
   "bin": "bin/index.js",
   "scripts": {
-    "test": "npm run test:lint && npm run test:tap && npm run test:examples",
+    "test": "run-s test:lint test:tap test:lib test:examples",
     "test:examples": "./bin/index.js examples/*.js | tap-spec",
-    "test:lib": "./bin/index.js lib/*.js | tap-spec",
+    "test:lib": "./bin/index.js -i lib/*.test.js lib/*.js | tap-spec",
     "test:lint": "eslint -c .eslintrc.json lib bin",
     "test:tap": "tap lib/*.test.js | tap-spec"
   },
@@ -41,6 +41,7 @@
   "dependencies": {
     "babel-core": "6.26.0",
     "dox": "0.9.0",
+    "glob": "7.1.2",
     "require-from-string": "1.2.1",
     "tap": "10.7.2",
     "zeelib": "3.0.8"
@@ -54,6 +55,7 @@
     "eslint-plugin-node": "5.1.1",
     "eslint-plugin-promise": "3.5.0",
     "eslint-plugin-unicorn": "2.1.2",
+    "npm-run-all": "4.1.1",
     "tap-spec": "4.1.1"
   },
   "engines": {
