--- a/examples/package.json
+++ b/examples/package.json
@@ -8,11 +8,22 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "private": true,
   "devDependencies": {
     "babel-plugin-transform-es2015-modules-commonjs": "6.26.0",
     "babel-plugin-transform-flow-strip-types": "6.22.0",
     "babel-preset-env": "1.6.0",
     "babel-preset-stage-3": "6.24.1"
-  }
+  },
+  "babel": {
+    "presets": [
+      "stage-3",
+      "env"
+    ],
+    "plugins": [
+      "transform-flow-strip-types",
+      "transform-es2015-modules-commonjs"
+    ],
+    "comments": false
+  },
+  "private": true
 }
