--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   "devDependencies": {
     "babel-eslint": "8.2.2",
     "eslint": "4.19.1",
-    "eslint-config-jane": "1.2.1",
+    "eslint-config-zacanger": "3.1.0",
     "eslint-plugin-babel": "5.0.0",
     "eslint-plugin-import": "2.10.0",
     "eslint-plugin-node": "6.0.1",
